# ff-py-sdk

./: LICENSE  README.md  pyproject.toml  setup.cfg
examples/algoLiquidGovernance/: ff_burn_gALGO.py  ffutils.py
examples/algo_liquid_governance/: ff_burn_gALGO.py  ffutils.py
examples/lend/: ff_f-asset_burn.py  ff_full_user_report.py  ff_get_farming_aprs.py  ff_loan_00_user_loans_report.py  ff_loan_01_optin_collateral.py  ff_loan_02_add_collateral.py  ff_loan_03_remove_collateral_f-part.py  ff_loan_04_borrow.py  ff_loan_05_repay.py  ff_loan_06_create.py  ff_staking_00_report.py  ff_staking_01_optin_asset.py  ff_staking_02_deposit.py  ff_staking_03_withdraw_f-part.py  ff_staking_04_claim.py  ffutils.py
examples/lending/: ff_f-asset_burn.py  ff_full_user_report.py  ff_get_farming_aprs.py  ff_loan_00_user_loans_report.py  ff_loan_01_optin_collateral.py  ff_loan_02_add_collateral.py  ff_loan_03_remove_collateral_f-part.py  ff_loan_04_borrow.py  ff_loan_05_repay.py  ff_loan_06_create.py  ff_staking_00_report.py  ff_staking_01_optin_asset.py  ff_staking_02_deposit.py  ff_staking_03_withdraw_f-part.py  ff_staking_04_claim.py  ffutils.py
examples/router/: ff_swap.py
examples/xAlgo/: ff_xAlgo_immediate_stake.py  ff_xAlgo_unstake.py
examples/xalgo/: ff_mint_burn_xAlgo.py  ff_xALGO_immediate_stake.py  ff_xALGO_unstake.py
ffsdk/: __init__.py  client.py  config.py  mathlib.py  state_utils.py  transaction_utils.py
ffsdk/algo_liquid_governance/: __init__.py
ffsdk/lend/: __init__.py  amm.py  datatypes.py  deposit.py  deposit_staking.py  formulae.py  loan.py  opup.py  oracle.py  utils.py
ffsdk/lending/: __init__.py
ffsdk/router/: __init__.py  checks.py  client.py  datatypes.py  referrer.py  swap_admin.py
(+59 files in other folders)
